# mch2022-rp2040-test

./: CMakeLists.txt  blinking_led.c  blinking_led.h  build.sh  clean.sh  flash.sh  flashloader.c  flashloader_interface.c  hardware.h  i2c_peripheral.c  i2c_peripheral.h  lcd.c  main.c  msc_disk.c  spi_slave.c  spi_slave.h  stdio_cdc2.c  stdio_cdc2.h  tusb_config.h  uart_task.c  uart_task.h  usb_descriptors.c  usb_hid.c  usb_hid.h  webusb_task.c  webusb_task.h  ws2812.c  ws2812.h
